found issue with overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -707,11 +707,11 @@ ul {
   justify-self: flex-end;
   align-self: center;
   height: fit-content;
-  margin: 2rem 0rem;
+  margin: 2rem 2rem;
 
   img {
-    width: 400px;
-    height: 700px;
+    width: 350px;
+    height: 600px;
     margin-bottom: -10px;
   }
 
